--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
     <dependencies>
         <!-- MySQL JDBC -->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.33</version>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.3.0</version>
         </dependency>
 
         <!-- Servlets/JSP -->
