fixed header and xml

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,7 +27,7 @@
 
     <!-- Default Page -->
     <welcome-file-list>
-        <welcome-file>views/bookList.jsp</welcome-file>
+        <welcome-file>views/bookListView.jsp</welcome-file>
     </welcome-file-list>
 
     <!-- JSP Configuration -->
