--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
     <!-- Character Encoding Filter (Force UTF-8) -->
     <filter>
         <filter-name>encodingFilter</filter-name>
-        <filter-class>com.library.filter.EncodingFilter</filter-class>
+        <filter-class>library.filter.EncodingFilter</filter-class>
         <init-param>
             <param-name>encoding</param-name>
             <param-value>UTF-8</param-value>
