--- a/src/main/resources/db.properties.template
+++ b/src/main/resources/db.properties.template
@@ -1,5 +1,5 @@
 # Rename to db.properties and fill in locally
-# Additionally change schema.sql accordingly
+# Additionally change create_schema.sql accordingly
 db.url=jdbc:mysql://localhost:3306/library_db
 db.user=your_username
 db.password=your_password
